<resources>
    <string name="app_name">Abstract Foods</string>
    <string name="Home">Home</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>
    <string name="login"> Abstract Foods</string>
    <string name="discover">Discover!</string>
    <string name="signup">Sign Up!</string>
    <string name="Report">Report</string>
    <string name="main_image">Add Main Image</string>
    <string name="short_des">Short Description:</string>
    <string name="ingred">Ingredient Adder</string>
    <string name="cancel">Cancel</string>
    <string name="ingre">Ingredient</string>
    <string name="title_activity_ingredient_adder">IngredientAdderActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_change_passsword">ChangePasssword</string>
    <string name="change_passowrd">Change Password</string>
    <string name="searchbyname">Search By Name</string>
    <string name="logout">Log Out</string>
    <string name="list_view">Food List View</string>>


    <!-- Testing PLEASE IGNORE BELOW  -->

    <string name="IngredientFinderTitle">Ingredient Finder</string>
    <string name="IngredientFinderD">Add or Remove Ingredients.</string>
    <string name="IF_settings">Settings</string>
    <string name="IFactivity">IngredientFinderActivity</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="currentlist">Ingredients:</string>


</resources>
