<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/food"
      android:id="@+id/menu_food"/>

    <item android:title="@string/profile"
          android:id="@+id/menu_profile"/>

    <item android:title="@string/discover"
          android:id="@+id/menu_discover"/>

    <item android:title="@string/signup"
          android:id="@+id/menu_signup"/>


    <item android:title="@string/login"
          android:id="@+id/menu_login"/>

    <item android:title="@string/Home"
        android:id="@+id/menu_home"/>

    <item android:title="Report"
        android:id="@+id/menu_report"/>



    <item android:title="Update"
                android:id="@+id/menu_update"
    />
    <item android:title="add res"
          android:id="@+id/menu_add_recipe"
        />

</menu>