<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".UploadActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Food Name"
        android:ems="10"
        android:id="@+id/foodname_textview"
        android:layout_marginBottom="@dimen/space_between"

        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:spinnerMode="dialog"
        android:layout_marginBottom="@dimen/space_between"
        android:id="@+id/spinner"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:padding="@dimen/space_between"
        android:background="@drawable/fake_button"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1"
            android:scaleY="1"
            android:src="@drawable/plate"
            android:cropToPadding="false"
            android:contextClickable="false"
            android:layout_below="@+id/mainimage_textview"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/mainimage_textview"/>


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_image"
            android:id="@+id/mainimage_textview"
            android:layout_below="@id/mainimage_textview"
            android:clickable="true"


            />



    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_des"
        android:layout_marginTop="@dimen/space_between"
        android:padding="1dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_edit_text"
        android:hint="@string/short_des"
        android:layout_gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="5"

        android:ellipsize="start"
        android:maxLength="150"
        android:background="#FFFFFF"
        android:lines="5"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:id="@+id/cancel_bt"
        android:background="@drawable/button"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ingred"
        android:onClick="ingred_adder_page"
        android:id="@+id/ingredient_adder_bt"
        android:background="@drawable/button"
        />

</LinearLayout>


</LinearLayout>
