<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.food.abstractfood.D_IngredientFinder">



    <Spinner
        android:id="@+id/fromList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
       >

    </Spinner>

    <Button android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"

        android:padding ="10dp"
        android:layout_marginLeft="18dp"
        android:layout_below="@+id/fromList"
        android:layout_toStartOf="@+id/remove" />

    <Button android:id="@+id/remove" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:text="@string/remove"
        android:padding ="5dp"

        android:layout_alignTop="@+id/add"
        android:layout_alignStart="@+id/igsearchbutton"
        android:layout_marginStart="51dp" />

    <TextView android:id="@+id/ingredientstxt" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentLeft="true"
        android:layout_below="@+id/remove" android:layout_marginTop="31dp"
        android:text="@string/currentlist" android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/Ilistview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/igsearchbutton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ingredientstxt"
        android:layout_alignParentEnd="true">
    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SEARCH!"
        android:id="@+id/igsearchbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        />


</RelativeLayout>
